feat(cmd/gno)!: change all `-verbose` flags to `-v` (#1716)
BREAKING CHANGE: `-verbose` is no longer a flag recognised by any
command. All its usages should be switched to `-v`.

Per the decision on #1555, we now have some exceptions for common
scenarios where short flags make sense. `gno test -v` is super-useful as
it connects to the muscle memory a Go developer has (with `go test -v`),
so this PR adds it.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -11,15 +11,15 @@ help:
 
 .PHONY: transpile
 transpile:
-	go run ../gnovm/cmd/gno transpile --verbose .
+	go run ../gnovm/cmd/gno transpile -v .
 
 .PHONY: build
 build:
-	go run ../gnovm/cmd/gno transpile --verbose --gobuild .
+	go run ../gnovm/cmd/gno transpile -v --gobuild .
 
 .PHONY: test
 test:
-	go run ../gnovm/cmd/gno test --verbose ./...
+	go run ../gnovm/cmd/gno test -v ./...
 
 .PHONY: lint
 lint:
@@ -27,7 +27,7 @@ lint:
 
 .PHONY: test.sync
 test.sync:
-	go run ../gnovm/cmd/gno test --verbose --update-golden-tests ./...
+	go run ../gnovm/cmd/gno test -v --update-golden-tests ./...
 
 .PHONY: clean
 clean:
