--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -32,7 +32,7 @@ jobs:
         with:
           go-version: ${{ matrix.goversion }}
       - run: go install -v ./gnovm/cmd/gno
-      - run: go run ./gnovm/cmd/gno transpile --verbose --gobuild ./examples
+      - run: go run ./gnovm/cmd/gno transpile -v --gobuild ./examples
   test:
     strategy:
       fail-fast: false
@@ -57,7 +57,7 @@ jobs:
           echo "LOG_LEVEL=debug" >> $GITHUB_ENV
           echo "LOG_PATH_DIR=$LOG_PATH_DIR" >> $GITHUB_ENV
       - run: go install -v ./gnovm/cmd/gno
-      - run: go run ./gnovm/cmd/gno test --verbose ./examples/...
+      - run: go run ./gnovm/cmd/gno test -v ./examples/...
   lint:
     strategy:
       fail-fast: false
@@ -75,10 +75,10 @@ jobs:
           go-version: ${{ matrix.goversion }}
       - run: go install -v ./gnovm/cmd/gno
       # testing official directories, basically examples/ minus examples/.../x/.
-      - run: go run ./gnovm/cmd/gno lint --verbose ./examples/gno.land/p
-      - run: go run ./gnovm/cmd/gno lint --verbose ./examples/gno.land/r/demo
-      - run: go run ./gnovm/cmd/gno lint --verbose ./examples/gno.land/r/gnoland
-      - run: go run ./gnovm/cmd/gno lint --verbose ./examples/gno.land/r/system
+      - run: go run ./gnovm/cmd/gno lint -v ./examples/gno.land/p
+      - run: go run ./gnovm/cmd/gno lint -v ./examples/gno.land/r/demo
+      - run: go run ./gnovm/cmd/gno lint -v ./examples/gno.land/r/gnoland
+      - run: go run ./gnovm/cmd/gno lint -v ./examples/gno.land/r/system
     # TODO: track coverage
   mod-tidy:
     strategy:
